// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorProTable 📝 EditableProTable support recordCreatorProps 1`] = `
<div
  class="ant-pro-table"
>
  <div
    class="ant-card"
  >
    <div
      class="ant-card-body"
      style="padding-top:0"
    >
      <div
        class="ant-table-wrapper"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table ant-table-middle ant-table-layout-fixed"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout:fixed"
                  >
                    <colgroup>
                      <col
                        style="width:48px"
                      />
                      <col
                        style="width:30%"
                      />
                      <col
                        style="width:120px"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                        />
                        <th
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-pro-core-label-tip"
                          >
                            标题
                            <span
                              class="ant-pro-core-label-tip-icon"
                            >
                              <span
                                aria-label="info-circle"
                                class="anticon anticon-info-circle"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="info-circle"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                  />
                                  <path
                                    d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-table-filter-column"
                          >
                            <span
                              class="ant-table-column-title"
                            >
                              状态
                            </span>
                            <span
                              class="ant-dropdown-trigger ant-table-filter-trigger"
                              role="button"
                              tabindex="-1"
                            >
                              <span
                                aria-label="filter"
                                class="anticon anticon-filter"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="filter"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          创建时间
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          操作
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="624748504"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left:0px"
                          />
                          <button
                            aria-label="展开行"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                            type="button"
                          />
                          <div
                            class="ant-pro-field-index-column ant-pro-field-index-column-border"
                          >
                            1
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line"
                            style="width:100%;margin:0;padding:0"
                            title=""
                          >
                            🐛 [BUG]yarn install命令 antd2.4.5会报错
                            <div
                              aria-label="复制"
                              class="ant-typography-copy"
                              role="button"
                              style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
                              tabindex="0"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
                          >
                            <span
                              class="ant-badge-status-dot ant-badge-status-processing"
                            />
                            <span
                              class="ant-badge-status-text"
                            >
                              解决中
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span>
                            2020-05-26
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <a
                                id="editor"
                              >
                                编辑
                              </a>
                            </div>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="624691229"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left:0px"
                          />
                          <button
                            aria-label="展开行"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                            type="button"
                          />
                          <div
                            class="ant-pro-field-index-column ant-pro-field-index-column-border"
                          >
                            2
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line"
                            style="width:100%;margin:0;padding:0"
                            title=""
                          >
                            🐛 [BUG]无法创建工程npm create umi
                            <div
                              aria-label="复制"
                              class="ant-typography-copy"
                              role="button"
                              style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
                              tabindex="0"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
                          >
                            <span
                              class="ant-badge-status-dot ant-badge-status-success"
                            />
                            <span
                              class="ant-badge-status-text"
                            >
                              已解决
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span>
                            2020-05-26
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <a
                                id="editor"
                              >
                                编辑
                              </a>
                            </div>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="624674790"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left:0px"
                          />
                          <button
                            aria-label="展开行"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                            type="button"
                          />
                          <div
                            class="ant-pro-field-index-column ant-pro-field-index-column-border"
                          >
                            3
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line"
                            style="width:100%;margin:0;padding:0"
                            title=""
                          >
                            🧐 [问题] build 后还存在 es6 的代码（Umi@2.13.13）
                            <div
                              aria-label="复制"
                              class="ant-typography-copy"
                              role="button"
                              style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
                              tabindex="0"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
                          >
                            <span
                              class="ant-badge-status-dot ant-badge-status-error"
                            />
                            <span
                              class="ant-badge-status-text"
                            >
                              未解决
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span>
                            2020-05-26
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <a
                                id="editor"
                              >
                                编辑
                              </a>
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="ant-btn ant-btn-dashed"
        style="display:block;margin:10px 0;width:100%"
        type="button"
      >
        <span
          aria-label="plus"
          class="anticon anticon-plus"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="plus"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <defs />
            <path
              d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
            />
            <path
              d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
            />
          </svg>
        </span>
        <span>
          测试添加数据
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`EditorProTable 📝 EditableProTable support recordCreatorProps.position 1`] = `
<div
  class="ant-pro-table"
>
  <div
    class="ant-card"
  >
    <div
      class="ant-card-body"
      style="padding-top:0"
    >
      <div
        class="ant-table-wrapper"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table ant-table-middle ant-table-layout-fixed"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout:fixed"
                  >
                    <colgroup>
                      <col
                        style="width:48px"
                      />
                      <col
                        style="width:30%"
                      />
                      <col
                        style="width:120px"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                        />
                        <th
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-pro-core-label-tip"
                          >
                            标题
                            <span
                              class="ant-pro-core-label-tip-icon"
                            >
                              <span
                                aria-label="info-circle"
                                class="anticon anticon-info-circle"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="info-circle"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                  />
                                  <path
                                    d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-table-filter-column"
                          >
                            <span
                              class="ant-table-column-title"
                            >
                              状态
                            </span>
                            <span
                              class="ant-dropdown-trigger ant-table-filter-trigger"
                              role="button"
                              tabindex="-1"
                            >
                              <span
                                aria-label="filter"
                                class="anticon anticon-filter"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="filter"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          创建时间
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          操作
                        </th>
                      </tr>
                      <tr
                        style="position:relative"
                      >
                        <td
                          colspan="0"
                          style="visibility:hidden"
                        >
                          <button
                            class="ant-btn ant-btn-dashed"
                            style="display:block;margin:10px 0;width:100%"
                            type="button"
                          >
                            <span
                              aria-label="plus"
                              class="anticon anticon-plus"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="plus"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <defs />
                                <path
                                  d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
                                />
                                <path
                                  d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
                                />
                              </svg>
                            </span>
                            <span>
                              测试添加数据
                            </span>
                          </button>
                        </td>
                        <td
                          colspan="5"
                          style="position:absolute;left:0;width:100%"
                        >
                          <button
                            class="ant-btn ant-btn-dashed"
                            style="display:block;margin:10px 0;width:100%"
                            type="button"
                          >
                            <span
                              aria-label="plus"
                              class="anticon anticon-plus"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="plus"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <defs />
                                <path
                                  d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
                                />
                                <path
                                  d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
                                />
                              </svg>
                            </span>
                            <span>
                              测试添加数据
                            </span>
                          </button>
                        </td>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="624748504"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left:0px"
                          />
                          <button
                            aria-label="展开行"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                            type="button"
                          />
                          <div
                            class="ant-pro-field-index-column ant-pro-field-index-column-border"
                          >
                            1
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line"
                            style="width:100%;margin:0;padding:0"
                            title=""
                          >
                            🐛 [BUG]yarn install命令 antd2.4.5会报错
                            <div
                              aria-label="复制"
                              class="ant-typography-copy"
                              role="button"
                              style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
                              tabindex="0"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
                          >
                            <span
                              class="ant-badge-status-dot ant-badge-status-processing"
                            />
                            <span
                              class="ant-badge-status-text"
                            >
                              解决中
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span>
                            2020-05-26
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <a
                                id="editor"
                              >
                                编辑
                              </a>
                            </div>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="624691229"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left:0px"
                          />
                          <button
                            aria-label="展开行"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                            type="button"
                          />
                          <div
                            class="ant-pro-field-index-column ant-pro-field-index-column-border"
                          >
                            2
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line"
                            style="width:100%;margin:0;padding:0"
                            title=""
                          >
                            🐛 [BUG]无法创建工程npm create umi
                            <div
                              aria-label="复制"
                              class="ant-typography-copy"
                              role="button"
                              style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
                              tabindex="0"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
                          >
                            <span
                              class="ant-badge-status-dot ant-badge-status-success"
                            />
                            <span
                              class="ant-badge-status-text"
                            >
                              已解决
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span>
                            2020-05-26
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <a
                                id="editor"
                              >
                                编辑
                              </a>
                            </div>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="624674790"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left:0px"
                          />
                          <button
                            aria-label="展开行"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                            type="button"
                          />
                          <div
                            class="ant-pro-field-index-column ant-pro-field-index-column-border"
                          >
                            3
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line"
                            style="width:100%;margin:0;padding:0"
                            title=""
                          >
                            🧐 [问题] build 后还存在 es6 的代码（Umi@2.13.13）
                            <div
                              aria-label="复制"
                              class="ant-typography-copy"
                              role="button"
                              style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
                              tabindex="0"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
                          >
                            <span
                              class="ant-badge-status-dot ant-badge-status-error"
                            />
                            <span
                              class="ant-badge-status-text"
                            >
                              未解决
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span>
                            2020-05-26
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <a
                                id="editor"
                              >
                                编辑
                              </a>
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditorProTable 📝 EditableProTable support recordCreatorProps=false 1`] = `
<div
  class="ant-pro-table"
>
  <div
    class="ant-card"
  >
    <div
      class="ant-card-body"
      style="padding-top:0"
    >
      <div
        class="ant-table-wrapper"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table ant-table-middle ant-table-layout-fixed"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout:fixed"
                  >
                    <colgroup>
                      <col
                        style="width:48px"
                      />
                      <col
                        style="width:30%"
                      />
                      <col
                        style="width:120px"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                        />
                        <th
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-pro-core-label-tip"
                          >
                            标题
                            <span
                              class="ant-pro-core-label-tip-icon"
                            >
                              <span
                                aria-label="info-circle"
                                class="anticon anticon-info-circle"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="info-circle"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                  />
                                  <path
                                    d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-table-filter-column"
                          >
                            <span
                              class="ant-table-column-title"
                            >
                              状态
                            </span>
                            <span
                              class="ant-dropdown-trigger ant-table-filter-trigger"
                              role="button"
                              tabindex="-1"
                            >
                              <span
                                aria-label="filter"
                                class="anticon anticon-filter"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="filter"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          创建时间
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          操作
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="624748504"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left:0px"
                          />
                          <button
                            aria-label="展开行"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                            type="button"
                          />
                          <div
                            class="ant-pro-field-index-column ant-pro-field-index-column-border"
                          >
                            1
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line"
                            style="width:100%;margin:0;padding:0"
                            title=""
                          >
                            🐛 [BUG]yarn install命令 antd2.4.5会报错
                            <div
                              aria-label="复制"
                              class="ant-typography-copy"
                              role="button"
                              style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
                              tabindex="0"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
                          >
                            <span
                              class="ant-badge-status-dot ant-badge-status-processing"
                            />
                            <span
                              class="ant-badge-status-text"
                            >
                              解决中
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span>
                            2020-05-26
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <a
                                id="editor"
                              >
                                编辑
                              </a>
                            </div>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="624691229"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left:0px"
                          />
                          <button
                            aria-label="展开行"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                            type="button"
                          />
                          <div
                            class="ant-pro-field-index-column ant-pro-field-index-column-border"
                          >
                            2
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line"
                            style="width:100%;margin:0;padding:0"
                            title=""
                          >
                            🐛 [BUG]无法创建工程npm create umi
                            <div
                              aria-label="复制"
                              class="ant-typography-copy"
                              role="button"
                              style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
                              tabindex="0"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
                          >
                            <span
                              class="ant-badge-status-dot ant-badge-status-success"
                            />
                            <span
                              class="ant-badge-status-text"
                            >
                              已解决
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span>
                            2020-05-26
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <a
                                id="editor"
                              >
                                编辑
                              </a>
                            </div>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="624674790"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left:0px"
                          />
                          <button
                            aria-label="展开行"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                            type="button"
                          />
                          <div
                            class="ant-pro-field-index-column ant-pro-field-index-column-border"
                          >
                            3
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line"
                            style="width:100%;margin:0;padding:0"
                            title=""
                          >
                            🧐 [问题] build 后还存在 es6 的代码（Umi@2.13.13）
                            <div
                              aria-label="复制"
                              class="ant-typography-copy"
                              role="button"
                              style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
                              tabindex="0"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
                          >
                            <span
                              class="ant-badge-status-dot ant-badge-status-error"
                            />
                            <span
                              class="ant-badge-status-text"
                            >
                              未解决
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span>
                            2020-05-26
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <a
                                id="editor"
                              >
                                编辑
                              </a>
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditorProTable 📝 columns initialValue alway work 1`] = `
<div
  class="ant-pro-table"
>
  <div
    class="ant-card"
  >
    <div
      class="ant-card-body"
      style="padding-top: 0px;"
    >
      <div
        class="ant-table-wrapper"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table ant-table-middle ant-table-layout-fixed"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: fixed;"
                  >
                    <colgroup>
                      <col
                        style="width: 48px;"
                      />
                      <col
                        style="width: 48px;"
                      />
                      <col
                        style="width: 48px;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                        />
                        <th
                          class="ant-table-cell"
                        />
                        <th
                          class="ant-table-cell"
                        />
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="624748504"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left: 0px;"
                          />
                          <button
                            aria-label="展开行"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                            type="button"
                          />
                          <div
                            class="ant-row ant-form-item"
                            style="margin: -5px 0px -5px 0px;"
                          >
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <span
                                    class="ant-input-affix-wrapper"
                                  >
                                    <input
                                      class="ant-input"
                                      placeholder="请输入"
                                      type="text"
                                      value=""
                                    />
                                    <span
                                      class="ant-input-suffix"
                                    >
                                      <span
                                        aria-label="close-circle"
                                        class="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
                                        role="button"
                                        tabindex="-1"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="close-circle"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-row ant-form-item"
                            style="margin: -5px 0px -5px 0px;"
                          >
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <span
                                    class="ant-input-affix-wrapper"
                                  >
                                    <input
                                      class="ant-input"
                                      placeholder="请输入"
                                      type="text"
                                      value="123"
                                    />
                                    <span
                                      class="ant-input-suffix"
                                    >
                                      <span
                                        aria-label="close-circle"
                                        class="anticon anticon-close-circle ant-input-clear-icon"
                                        role="button"
                                        tabindex="-1"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="close-circle"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-row ant-form-item"
                            style="margin: -5px 0px -5px 0px;"
                          >
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <span
                                    class="ant-input-affix-wrapper"
                                  >
                                    <input
                                      class="ant-input"
                                      placeholder="请输入"
                                      type="text"
                                      value="1234"
                                    />
                                    <span
                                      class="ant-input-suffix"
                                    >
                                      <span
                                        aria-label="close-circle"
                                        class="anticon anticon-close-circle ant-input-clear-icon"
                                        role="button"
                                        tabindex="-1"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="close-circle"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="624691229"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left: 0px;"
                          />
                          <button
                            aria-label="展开行"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                            type="button"
                          />
                          -
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          -
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          -
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="624674790"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left: 0px;"
                          />
                          <button
                            aria-label="展开行"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                            type="button"
                          />
                          -
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          -
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          -
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="ant-btn ant-btn-dashed"
        style="display: block; margin: 10px 0px; width: 100%;"
        type="button"
      >
        <span
          aria-label="plus"
          class="anticon anticon-plus"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="plus"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <defs />
            <path
              d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
            />
            <path
              d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
            />
          </svg>
        </span>
        <span>
          添加一行数据
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`EditorProTable 📝 columns support editable test 1`] = `
<div
  class="ant-pro-table"
>
  <div
    class="ant-card"
  >
    <div
      class="ant-card-body"
      style="padding-top:0"
    >
      <div
        class="ant-table-wrapper"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table ant-table-middle ant-table-layout-fixed"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout:fixed"
                  >
                    <colgroup>
                      <col
                        style="width:48px"
                      />
                      <col
                        style="width:48px"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                        />
                        <th
                          class="ant-table-cell"
                        />
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="624748504"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left:0px"
                          />
                          <button
                            aria-label="展开行"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                            type="button"
                          />
                          <div
                            class="ant-pro-field-index-column ant-pro-field-index-column-border"
                          >
                            1
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-pro-field-index-column ant-pro-field-index-column-border"
                          >
                            1
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="624691229"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left:0px"
                          />
                          <button
                            aria-label="展开行"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                            type="button"
                          />
                          <div
                            class="ant-pro-field-index-column ant-pro-field-index-column-border"
                          >
                            2
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-pro-field-index-column ant-pro-field-index-column-border"
                          >
                            2
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="624674790"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left:0px"
                          />
                          <button
                            aria-label="展开行"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                            type="button"
                          />
                          <div
                            class="ant-pro-field-index-column ant-pro-field-index-column-border"
                          >
                            3
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-pro-field-index-column ant-pro-field-index-column-border"
                          >
                            3
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="ant-btn ant-btn-dashed"
        style="display:block;margin:10px 0;width:100%"
        type="button"
      >
        <span
          aria-label="plus"
          class="anticon anticon-plus"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="plus"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <defs />
            <path
              d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
            />
            <path
              d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
            />
          </svg>
        </span>
        <span>
          添加一行数据
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`EditorProTable 📝 renderFormItem run defaultRender 1`] = `
<div
  class="ant-pro-table"
>
  <div
    class="ant-card"
  >
    <div
      class="ant-card-body"
      style="padding-top:0"
    >
      <div
        class="ant-table-wrapper"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table ant-table-middle ant-table-layout-fixed"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout:fixed"
                  >
                    <colgroup>
                      <col
                        style="width:48px"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                        />
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="624748504"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left:0px"
                          />
                          <button
                            aria-label="展开行"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                            type="button"
                          />
                          <div
                            class="ant-row ant-form-item"
                            style="margin-top:-5px;margin-bottom:-5px;margin-left:0;margin-right:0"
                          >
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-row ant-form-item"
                                    style="margin-top:-5px;margin-bottom:-5px;margin-left:0;margin-right:0"
                                  >
                                    <div
                                      class="ant-col ant-form-item-control"
                                    >
                                      <div
                                        class="ant-form-item-control-input"
                                      >
                                        <div
                                          class="ant-form-item-control-input-content"
                                        >
                                          <div
                                            class="ant-pro-field-index-column ant-pro-field-index-column-border"
                                          >
                                            1
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="624691229"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left:0px"
                          />
                          <button
                            aria-label="展开行"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                            type="button"
                          />
                          <div
                            class="ant-pro-field-index-column ant-pro-field-index-column-border"
                          >
                            2
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="624674790"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left:0px"
                          />
                          <button
                            aria-label="展开行"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                            type="button"
                          />
                          <div
                            class="ant-pro-field-index-column ant-pro-field-index-column-border"
                          >
                            3
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="ant-btn ant-btn-dashed"
        style="display:block;margin:10px 0;width:100%"
        type="button"
      >
        <span
          aria-label="plus"
          class="anticon anticon-plus"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="plus"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <defs />
            <path
              d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
            />
            <path
              d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
            />
          </svg>
        </span>
        <span>
          添加一行数据
        </span>
      </button>
    </div>
  </div>
</div>
`;
